--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babylonjs/core": "^5.26.1",
+    "@babylonjs/loaders": "^5.27.0",
     "@mdi/font": "5.9.55",
     "roboto-fontface": "*",
     "vue": "^3.2.37",
